# llm-adapter

./: .env.example  .gitignore  API_REFERENCE.md  AdapterResponse.md  CHANGELOG.md  DEVELOPMENT.md  EMBEDDING_MAGNITUDE.md  LICENSE  MANIFEST.in  MODEL_REGISTRY.md  Makefile  README.md  ReleaseNotes.md  pyproject.toml  pytest.ini  test_tool_fix.py
.build-env/: pyvenv.cfg
.github/workflows/: ci.yml  test.yml
.test-install/: pyvenv.cfg
docs/: API_REFERENCE.md  MODEL_REGISTRY.md  ReleaseNotes.md  _config.yml  api-reference.md  development.md  index.md  model-registry.md  sitemap.xml
docs/_includes/: head-custom.html
examples/: README.md  create_and_normalize_example.py  custom_registry.py  get_model_pricing_example.py  import_custom_registry.py  llm_adapter_import_example.py  llm_adapter_model_spec_example.py  openai_adapter_example.py  openai_embedding_example.py  provider_agnostic_embeddings.py  set_adapter_allowed_models.py  streaming_call_example.py  test_magnitude_metadata.py  test_model_spec.py  test_openai_base_url.py  test_openai_chat.py  test_openai_embeddings.py  test_streaming.py
scripts/: llm_adapter_setup.sh
src/llm_adapter/: ModelSpec.py  __init__.py  llm_adapter.py  model_registry.py
src/llm_adapter_demo/: __init__.py  api.py  config.py
tests/: test_gemini_direct.py  test_imports.py  test_llm_adapter.py  test_llm_embed-chat.py  test_pricing.py  test_registry.py  test_tool_calls_flow.py
tests/integration/: test_adapter_embedding_calls.py  test_gemini_tool_calls_flow.py  test_llm_adapter.py  test_openai_tool_calls_flow.py
tests/unit/: test_imports.py  test_tool_fix.py
ui/: app.js  index.html  styles.css
