[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrraj-llm-adapter"
version = "0.1.0"
description = "Standalone llm adapter/routing layer with a demo UI for testing provider connections and call and output signature comparison."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  {name = "Rajkumar Velliavitil"},
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai==2.8.1",
  "google-genai==1.60.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
tokens = [
  "tiktoken==0.5.2",
]

dev = [
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/vrraj/llm-adapter"
Repository = "https://github.com/vrraj/llm-adapter"
Issues = "https://github.com/vrraj/llm-adapter/issues"

[tool.setuptools.packages.find]
where = ["src"]
