[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrraj-llm-adapter"
version = "1.0.3"
description = "Standalone llm adapter/routing layer with a demo UI for testing provider connections and call and output signature comparison."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
authors = [
  {name = "Rajkumar Velliavitil"},
]

dependencies = [
  "openai==2.8.1",
  "google-genai==1.60.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
tokens = [
  "tiktoken==0.5.2",
]

dev = [
  "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/vrraj/llm-adapter"
Repository = "https://github.com/vrraj/llm-adapter"
Issues = "https://github.com/vrraj/llm-adapter/issues"

[tool.setuptools.packages.find]
where = ["src"]

